Fixed styling of mobile notes to prevent bleed, make less noisy.

--- a/dev/styles/_media.scss
+++ b/dev/styles/_media.scss
@@ -37,6 +37,13 @@
     margin: 5% 0;
   }
 
+  .notes-grid {
+    grid-template-columns: 2fr 6fr 1fr;
+    grid-row-gap: 1ch;
+    row-gap: 1ch;
+    margin-top: 20px;
+  }
+
   main .selection-head {
     width: 95%;
 
